# public_employee_salaries

./: .gitignore  README.md  about.html  app.py  explore-your-city.html  index.html  manage.py  mayor-compensation.html  overtime-pay.html  package-lock.json  pay-by-position.html  pyproject.toml  references.html  start.wsgi  w209.py
assets/css/: responsive.css  slick-theme.min.css  style.css
assets/js/: custom.js
public_employee_salaries/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: cancer-page.css  style.css
templates/: about-us.html  bootstrap-practice.html  cancer-page.html  city-comparison-dashboard.html  department-job.html  index copy.html  index.html  overtime-pay.html  references.html  state-level-view.html
webapp/: views.py
webapp/static/webapp/: styles.css
webapp/templates/: dashboard.html
